# ROS-course

1303/AM/: README.txt
1303/AM/1/: CMakeLists.txt  package.xml
1303/AM/1/src/: talker.cpp
1303/AM/2/listener/: CMakeLists.txt  package.xml
1303/AM/2/message/: CMakeLists.txt  package.xml
1303/AM/2/talker/: CMakeLists.txt  package.xml
1303/AM/3/listener/: CMakeLists.txt  package.xml
1303/AM/3/publisher/: CMakeLists.txt  package.xml
1303/AM/4/lab4/: CMakeLists.txt  package.xml
1303/BE/: README.txt
1303/BE/1/: CMakeLists.txt  package.xml
1303/BE/1/src/: lab1.cpp
1303/BE/2/holmes/: CMakeLists.txt  package.xml
1303/BE/2/place/: CMakeLists.txt  package.xml
1303/BE/2/place/msg/: Phrase.msg
1303/BE/2/place/src/: place.cpp
1303/BE/2/watson/: CMakeLists.txt  package.xml
1303/BE/3/: CMakeLists.txt  lab3.launch  package.xml
1303/BE/3/src/: C3Po.cpp  R2D2.cpp
1303/BE/4/AlgExt/: package.xml
1303/BE/5/: CMakeLists.txt  package.xml
1303/BE/5/src/: C3Po.cpp  R2D2.cpp
1303/BL/: CMakeLists.txt  README.txt  package.xml
1303/BL/1/src/: lap1.cpp
1303/BL/2/message/: CMakeLists.txt  package.xml
1303/BL/2/message/msg/: message.msg
1303/BL/2/reader/src/: reader.cpp
1303/BL/2/writer/: package.xml
1303/BL/2/writer/src/: writer.cpp
1303/BL/3/: package.xml
1303/BL/3/include/tf_lab/: bot.h
1303/BL/3/src/: lost_main.cpp
1303/BL/4/: package.xml
1303/BL/4/src/: teleop.cpp
1303/BL/5/: package.xml
1303/BL/5/src/: bot.cpp  lostbot.cpp  saver_main.cpp
1303/BL/reader/: CMakeLists.txt  package.xml
1303/BL/writer/: CMakeLists.txt
1303/DM/: README.txt
1303/DM/1/: CMakeLists.txt  package.xml
1303/DM/1/src/: publisher_tsim.cpp
1303/DM/2/packmsg/: CMakeLists.txt  package.xml
1303/DM/2/packpub/: CMakeLists.txt  package.xml
1303/DM/2/packpub/src/: pSat.cpp
1303/DM/2/packsub/: CMakeLists.txt  package.xml
1303/DM/3/: CMakeLists.txt  package.xml
1303/DM/3/src/: lost.cpp  rescuer.cpp
1303/DM/4/: CMakeLists.txt  package.xml
1303/DM/4/src/: planner.cpp
1303/DR/: README.txt
1303/DR/1/: CMakeLists.txt  package.xml  tlkr.launch
1303/DR/1/src/: talker.cpp
1303/DR/2/: lab2.launch
1303/DR/2/dr_sanders/: CMakeLists.txt  package.xml
1303/DR/2/emilia/: CMakeLists.txt  package.xml
1303/DR/2/gn_tokugava/: CMakeLists.txt  package.xml
1303/DR/3/lab3/: CMakeLists.txt  package.xml
1303/DR/4/AlgExt/: CMakeLists.txt  package.xml
1303/HI/: README.txt
1303/KA/: README.txt
1303/KA/1/: package.xml
1303/KA/1/src/: publisher.cpp
1303/KA/2/accountant/: CMakeLists.txt  package.xml
1303/KA/2/employee/: CMakeLists.txt  package.xml
1303/KA/2/messages/: CMakeLists.txt  package.xml
1303/KA/3/: CMakeLists.txt  package.xml
1303/KA/3/launch/: start.launch
1303/KA/3/src/: searcher.cpp  turtle_broadcaster.cpp  turtle_listener.cpp  turtle_walker.cpp  walker.cpp
1303/KA/lab1/: CMakeLists.txt  README.md
1303/LE/: README.txt
1303/LE/1/: CMakeLists.txt  package.xml
1303/LE/1/src/: painter.cpp
1303/LE/2/abm/: CMakeLists.txt  package.xml
1303/LE/2/missle/: CMakeLists.txt  package.xml
1303/LE/2/position_msg/: CMakeLists.txt  package.xml
1303/LE/3/: CMakeLists.txt  package.xml
1303/LE/3/include/: Robot.h
1303/LE/3/src/: Robot.cpp  lost.cpp  rescuer.cpp
1303/LE/4/: new_world.pgm  test_new.launch  test_new.world
1303/LE/4/mover/: CMakeLists.txt  package.xml
1303/LE/5/: CMakeLists.txt  package.xml
1303/LE/5/include/: Robot.h
1303/LE/5/src/: Robot.cpp  lost.cpp  rescuer.cpp
1303/NK/: README.txt
1303/NK/1/: CMakeLists.txt  package.xml
1303/NK/1/src/: manipulator.cpp
1303/NK/2/ultra_totalit_lab_girl/: CMakeLists.txt  package.xml
1303/NK/2/ultra_totalit_lab_guy/: CMakeLists.txt  package.xml
1303/NK/2/ultra_totalit_lab_man/: CMakeLists.txt  package.xml
1303/NK/2/ultra_totalit_lab_msg/: CMakeLists.txt  package.xml
1303/NK/3/: CMakeLists.txt  package.xml
1303/NK/3/src/: bot.cpp  lostbot.cpp  savebot.cpp  saver_main.cpp
1303/NK/4/: CMakeLists.txt  package.xml
1303/NK/5/: CMakeLists.txt  package.xml
1303/PI/: README.txt
1303/PN/: README.txt
1303/PV/: README.txt
1303/PV/1/: CMakeLists.txt  package.xml
1303/PV/1/src/: main.cpp
1303/ShV/: README.txt
1303/VA/: README.txt
1303/VA/1/: CMakeLists.txt  package.xml
1303/VA/2/: CMakeLists.txt  package.xml
1303/VA/3/: CMakeLists.txt  package.xml
1303/VA/3/src/: one.cpp  two.cpp
1303/ZA/: README.txt
1303/ZA/3/: CMakeLists.txt  package.xml
1303/ZA/4/: CMakeLists.txt  package.xml
1303/ZA/lab1/: CMakeLists.txt  package.xml
1303/ZA/lab1/src/: turtle_command.cpp
1303/ZD/: LAB1.md  LAB2.md  LAB3.md  LAB4.md  README.txt
1303/ZD/1/: CMakeLists.txt  package.xml
1303/ZD/1/src/: sender.cpp
1303/ZD/3/: rviz_config.rviz
1304/AA/: README.txt
1304/BaA/: README.txt
1304/BoA/: README.txt
1304/ChD/: README.txt
1304/DV/: README.txt
1304/DaA/: README.txt
1304/DaA/1/: CMakeLists.txt  README.txt  package.xml
1304/DaA/3/: CMakeLists.txt  package.xml
1304/DaA/3/common/: behavior.cpp  behavior.h  robot.cpp  robot.h
1304/DaA/3/src/: first_behavior.cpp  first_behavior.h  first_main.cpp  robot.cpp  robot.h  second_behavior.cpp  second_behavior.h  second_main.cpp
1304/DeA/: README.txt
1304/DeA/1/: CMakeLists.txt  lab1_runner  package.xml
1304/DeA/2/: lab2_runner
1304/DeA/3/: CMakeLists.txt  package.xml
1304/FOA/: README.txt
1304/GE/: README.txt
1304/GE/1/: package.xml
1304/GE/1/src/: lab1.cpp
1304/KD/: README.txt
1304/KD/1/: package.xml
1304/KD/1/src/: lab1.cpp
1304/KN/: README.txt
1304/KN/1/: CMakeLists.txt  package.xml
1304/KS/: README.txt
1304/KS/1/: CMakeLists.txt  package.xml
1304/KS/3/: CMakeLists.txt  package.xml
1304/KS/3/src/: Robot.cpp  Robot.h  assistant.cpp  missing.cpp
1304/MI/: README.txt
1304/MN/: README.txt
1304/MN/1/: CMakeLists.txt  package.xml
1304/MN/1/src/: lab1.cpp
1304/OI/: README.txt
1304/OV/: README.txt
1304/UA/: README.txt
1304/VA/: README.txt
1304/VA/lab3/: CMakeLists.txt  lab3.launch  package.xml
1304/YaM/: README.txt
1304/YaM/1/: package.xml
(+283 files in other folders)
