<?xml version="1.0"?>
<package>
  <name>lab1</name>
  <version>1.0.0</version>
  <description>The lab1 package is need to pass Lab #1 succsessfully. ^.^ mimi ^.^ </description>

  <maintainer email="79112899678@ya.ru">libi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
