<?xml version="1.0"?>
<package>
<name>lab1</name><version>0.0.1</version>
<description>The hello_world package. It contains one node that
prints a message on a screen</description>
<maintainer email="ant.filatov@gmail.com">anton</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<export>
<depend>roscpp</depend>
<depend>geometry_msgs</depend>
</export>
</package>
