<?xml version="1.0"?>
<package>
  <name>lab3</name>
  <version>0.0.0</version>
  <description>The 3 package</description>

  <maintainer email="rina@todo.todo">rina</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>