<?xml version="1.0"?>
<package>
  <name>lab5</name>
  <version>0.0.0</version>
  <description>The 3 package</description>

  <maintainer email="rina@todo.todo">rina</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <build_depend>gazebo</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>gazebo</run_depend>
    <run_depend>roscpp</run_depend>
    
  </export>
</package>