<?xml version="1.0"?>
<package>
  <name>talker</name>
  <version>1.0.0</version>
  <description>ETU LETI, group 1303, lab #1</description>
  <maintainer email="Roman.Degtyar@protonmail.com">Roman</maintainer>
  <license>BSD</license>
  <author email="Roman.Degtyar@protonmail.com">Roman Degtyar</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
  </export>
</package>
