<?xml version="1.0"?>
<package>
  <name>lab1</name>
  <version>0.0.1</version>
  <description>The lab1 package</description>

  <maintainer email="parfenov.vladimir.s@gmail.com">root</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>



  <export>


  </export>
</package>
