<?xml version="1.0"?>
<package>
  <name>lab1</name>
  <version>0.0.0</version>
  <description>The lab1 package</description>

  <maintainer email="dima6120@gmail.com">dima6120</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
