<?xml version="1.0"?>
<package>
  <name>writer</name>
  <version>1.0.0</version>
  <description>The writer package is need to pass Lab #2 succsessfully. ^.^ mimi ^.^ </description>

  <maintainer email="79112899678@ya.ru">libi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
